Higher dimensional tensors

--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNuA0cXiC6z2VEO4RNcQK+5",
+      "authorship_tag": "ABX9TyNsuuOlxJHATRn/KvzVKhcd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,13 +45,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 71
         },
-        "outputId": "588b0e4d-8f57-424f-dcb7-8532476f878d"
+        "outputId": "35d93aba-c8df-43f2-daf7-c038173319d1"
       },
       "source": [
         "from keras.datasets import mnist\n",
         "(train_images, train_lables), (test_images, test_labels) = mnist.load_data()"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,12 +89,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "4109a8b9-0f50-441e-ec15-fa388aeaf6f0"
+        "outputId": "e9528307-e4db-4026-d16a-0d0c71c6bc41"
       },
       "source": [
         "train_images.shape\n"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -106,7 +106,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 5
         }
       ]
     },
@@ -119,12 +119,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "a6f0f07a-3aa5-4153-a5e2-957b435bce54"
+        "outputId": "f3aabbbe-2416-42a1-b53e-b7b282044b0c"
       },
       "source": [
         "len(train_lables)"
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -136,7 +136,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 6
         }
       ]
     },
@@ -149,12 +149,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "f68c6f06-4f25-4421-b47e-cde087419703"
+        "outputId": "9ef30fc6-62de-4db4-a051-eeb2dffeea47"
       },
       "source": [
         "train_lables"
       ],
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,7 +166,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 7
         }
       ]
     },
@@ -189,12 +189,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "0eff6229-c2eb-4162-a68f-bcb000e71154"
+        "outputId": "ee163e92-1b95-4e42-c6e6-f33547a80f34"
       },
       "source": [
         "test_images.shape"
       ],
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,7 +206,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 8
         }
       ]
     },
@@ -219,12 +219,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "641d6e51-c0b0-47cf-ffe7-6abd49acc647"
+        "outputId": "9e579d27-fa9b-4849-b8f8-253d532cc46f"
       },
       "source": [
         "len(test_labels)"
       ],
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,7 +236,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
     },
@@ -249,12 +249,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "2ddd562d-b870-4023-9993-bbb4d8e4e1a3"
+        "outputId": "d674aee2-839f-4262-966f-7e4a4beecb26"
       },
       "source": [
         "test_labels"
       ],
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +266,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 10
         }
       ]
     },
@@ -291,7 +291,7 @@
         "from keras import models\n",
         "from keras import layers\n"
       ],
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -306,7 +306,7 @@
         "net.add(layers.Dense(512, activation='relu', input_shape=(28 * 28,)))\n",
         "net.add(layers.Dense(10, activation='softmax'))"
       ],
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -345,7 +345,7 @@
         "            loss='categorical_crossentropy',\n",
         "            metrics=['accuracy'])"
       ],
-      "execution_count": 11,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -372,7 +372,7 @@
         "test_images = test_images.reshape((10000, 28 * 28))\n",
         "test_images = test_images.astype('float32') / 255"
       ],
-      "execution_count": 12,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -398,7 +398,7 @@
         "train_lables = to_categorical(train_lables)\n",
         "test_labels = to_categorical(test_labels)"
       ],
-      "execution_count": 13,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -410,26 +410,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 235
         },
-        "outputId": "7629b7fc-ed7b-410f-e2af-30d9764583d5"
+        "outputId": "100892ee-d9d1-4338-9f0b-0a67dc7c7c76"
       },
       "source": [
         "net.fit(train_images, train_lables, epochs=5, batch_size=128)"
       ],
-      "execution_count": 14,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/5\n",
-            "60000/60000 [==============================] - 5s 76us/step - loss: 0.2570 - accuracy: 0.9257\n",
+            "60000/60000 [==============================] - 5s 80us/step - loss: 0.2561 - accuracy: 0.9261\n",
             "Epoch 2/5\n",
-            "60000/60000 [==============================] - 4s 72us/step - loss: 0.1047 - accuracy: 0.9689\n",
+            "60000/60000 [==============================] - 4s 74us/step - loss: 0.1039 - accuracy: 0.9684\n",
             "Epoch 3/5\n",
-            "60000/60000 [==============================] - 4s 74us/step - loss: 0.0683 - accuracy: 0.9791\n",
+            "60000/60000 [==============================] - 4s 74us/step - loss: 0.0688 - accuracy: 0.9792\n",
             "Epoch 4/5\n",
-            "60000/60000 [==============================] - 4s 75us/step - loss: 0.0496 - accuracy: 0.9854\n",
+            "60000/60000 [==============================] - 4s 73us/step - loss: 0.0502 - accuracy: 0.9851\n",
             "Epoch 5/5\n",
-            "60000/60000 [==============================] - 4s 75us/step - loss: 0.0380 - accuracy: 0.9886\n"
+            "60000/60000 [==============================] - 5s 76us/step - loss: 0.0379 - accuracy: 0.9887\n"
           ],
           "name": "stdout"
         },
@@ -437,13 +437,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.callbacks.History at 0x7feefbc5a8d0>"
+              "<keras.callbacks.callbacks.History at 0x7f1b36dbcfd0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 16
         }
       ]
     },
@@ -466,17 +466,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "d9e1c5fe-4ac2-4329-eecd-0a9eafdf8309"
+        "outputId": "def9dd86-4310-474f-a6b0-9e16f3e5b8f4"
       },
       "source": [
         "test_loss, test_acc = net.evaluate(test_images, test_labels)"
       ],
-      "execution_count": 15,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "10000/10000 [==============================] - 0s 49us/step\n"
+            "10000/10000 [==============================] - 1s 51us/step\n"
           ],
           "name": "stdout"
         }
@@ -491,17 +491,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "5277ddc3-6491-40d0-d147-a18eb04f5872"
+        "outputId": "ab294a76-32b5-4396-b5ee-58cbbf9d030a"
       },
       "source": [
         "print(\"test_acc:\", test_acc)"
       ],
-      "execution_count": 16,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "test_acc: 0.9803000092506409\n"
+            "test_acc: 0.9812999963760376\n"
           ],
           "name": "stdout"
         }
@@ -576,14 +576,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "2317af42-c7e9-4bc4-d6ca-8ae54171ad32"
+        "outputId": "9999795e-0ecf-48f9-bfea-2ec767e2828a"
       },
       "source": [
         "import numpy as np\n",
         "x = np.array(12)\n",
         "x"
       ],
-      "execution_count": 17,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -595,7 +595,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 19
         }
       ]
     },
@@ -608,12 +608,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "146c8781-8ac8-433f-b612-64b9c5268ece"
+        "outputId": "d9df1b7e-66bd-4a3a-bcf5-5211b5cb91c3"
       },
       "source": [
         "x.ndim"
       ],
-      "execution_count": 18,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -625,7 +625,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 20
         }
       ]
     },
@@ -669,7 +669,7 @@
       "source": [
         "x = np.array([12, 3, 6, 14, 7])"
       ],
-      "execution_count": 19,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -681,12 +681,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "19191a67-2f86-46ca-f685-15cf4c337b38"
+        "outputId": "861f418d-78e9-4f5f-9d8d-6cd84f91d5ed"
       },
       "source": [
         "x"
       ],
-      "execution_count": 20,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -698,7 +698,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 22
         }
       ]
     },
@@ -711,12 +711,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "eb0410b2-9d95-40cb-956b-115b8923f035"
+        "outputId": "fc89aa4a-644a-4c47-e4e8-ab3eb8172869"
       },
       "source": [
         "x.ndim"
       ],
-      "execution_count": 21,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -728,7 +728,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 23
         }
       ]
     },
@@ -776,7 +776,7 @@
         "             [6, 79, 3, 35, 1],\n",
         "             [7, 80, 4, 36, 2]])"
       ],
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -788,12 +788,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "1845933b-99bc-4260-f0b9-0b96e93c8d1d"
+        "outputId": "ad1eaa8f-31a8-4fa5-ddde-3abbcecc8580"
       },
       "source": [
         "x.ndim"
       ],
-      "execution_count": 24,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -805,7 +805,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 25
         }
       ]
     },
@@ -817,6 +817,107 @@
       },
       "source": [
         "The entries from the first axis are called the *rows*, and the elements from the second axis are called the *columns*. [5, 78, 2, 34, 0] is the first row of x and [5, 6, 7] is the first column."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dE_PrPy0WxVz",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.2.4 3D tensors and higher-dimensional tensors"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sunhon09X0K9",
+        "colab_type": "text"
+      },
+      "source": [
+        "If we pack a matrix in a new array, you obtain a 3D tensor, which you can visually interpret as a cube of numbers. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "up-7WXBbYOur",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x = np.array([[[5, 78, 2, 34, 0],\n",
+        "                   [6, 79, 3, 35, 1],\n",
+        "                   [7, 80, 4, 36, 2]],\n",
+        "                  [[5, 78, 2, 34, 0],\n",
+        "                   [6, 79, 3, 35, 1],\n",
+        "                   [7, 80, 4, 36, 2]],\n",
+        "                  [[5, 78, 2, 34, 0],\n",
+        "                   [6, 79, 3, 35, 1],\n",
+        "                   [7, 80, 4, 36, 2]]])"
+      ],
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LC1ViipB9kT9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "0d748a21-5218-49e7-f331-a96386df8568"
+      },
+      "source": [
+        "x.ndim"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lU3N3vc69pKv",
+        "colab_type": "text"
+      },
+      "source": [
+        "Packing 3D tensors in an arrray, you create a 4D tensor. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U8FXnXvm99AM",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.2.5 Key attributes "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C4co6ho6-ECi",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
