--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNsuuOlxJHATRn/KvzVKhcd",
+      "authorship_tag": "ABX9TyMSKU+P7Jy25vwcAuLOvIry",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "from keras.datasets import mnist\n",
         "(train_images, train_lables), (test_images, test_labels) = mnist.load_data()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +94,7 @@
       "source": [
         "train_images.shape\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +124,7 @@
       "source": [
         "len(train_lables)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,7 +154,7 @@
       "source": [
         "train_lables"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -194,7 +194,7 @@
       "source": [
         "test_images.shape"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -224,7 +224,7 @@
       "source": [
         "len(test_labels)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +254,7 @@
       "source": [
         "test_labels"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -291,7 +291,7 @@
         "from keras import models\n",
         "from keras import layers\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -306,7 +306,7 @@
         "net.add(layers.Dense(512, activation='relu', input_shape=(28 * 28,)))\n",
         "net.add(layers.Dense(10, activation='softmax'))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -345,7 +345,7 @@
         "            loss='categorical_crossentropy',\n",
         "            metrics=['accuracy'])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -372,7 +372,7 @@
         "test_images = test_images.reshape((10000, 28 * 28))\n",
         "test_images = test_images.astype('float32') / 255"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -398,7 +398,7 @@
         "train_lables = to_categorical(train_lables)\n",
         "test_labels = to_categorical(test_labels)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -415,7 +415,7 @@
       "source": [
         "net.fit(train_images, train_lables, epochs=5, batch_size=128)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,7 +471,7 @@
       "source": [
         "test_loss, test_acc = net.evaluate(test_images, test_labels)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,7 +496,7 @@
       "source": [
         "print(\"test_acc:\", test_acc)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -583,7 +583,7 @@
         "x = np.array(12)\n",
         "x"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -613,7 +613,7 @@
       "source": [
         "x.ndim"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -669,7 +669,7 @@
       "source": [
         "x = np.array([12, 3, 6, 14, 7])"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -686,7 +686,7 @@
       "source": [
         "x"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -716,7 +716,7 @@
       "source": [
         "x.ndim"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -776,7 +776,7 @@
         "             [6, 79, 3, 35, 1],\n",
         "             [7, 80, 4, 36, 2]])"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -793,7 +793,7 @@
       "source": [
         "x.ndim"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -857,7 +857,7 @@
         "                   [6, 79, 3, 35, 1],\n",
         "                   [7, 80, 4, 36, 2]]])"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -874,7 +874,7 @@
       "source": [
         "x.ndim"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -914,6 +914,46 @@
       "cell_type": "markdown",
       "metadata": {
         "id": "C4co6ho6-ECi",
+        "colab_type": "text"
+      },
+      "source": [
+        "A tensor is defined by three key attributes:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nWEiqTZd_66A",
+        "colab_type": "text"
+      },
+      "source": [
+        "* *Number of axes (rank)*--For instance, a 3D tensor has three axes, and a matrix has two axes."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jO2N5ozWk8Z7",
+        "colab_type": "text"
+      },
+      "source": [
+        "* *Shape*-- This is a tuple of intergers that describes how many dimensions the tensor has along each axis."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hdIentbxlsWH",
+        "colab_type": "text"
+      },
+      "source": [
+        "* *Data type* (called dtype in Python libraries)--This is the type of the data contained in the tensor."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vNuGi6b5qKsB",
         "colab_type": "text"
       },
       "source": [
