Batches, Real-world tensors

--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO2Y91fZ3CCJWzBhf3A+eWF",
+      "authorship_tag": "ABX9TyMUKlpFtGuaOE2BCMqEZTFt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1142,6 +1142,262 @@
       },
       "source": [
         "#2.2.6 Manipulating tensors in Numpy"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uKTTUg2UqmG6",
+        "colab_type": "text"
+      },
+      "source": [
+        "Selecting specific elements in a tensor is called *tensor slicing* . It was performed with train_imgages[i] syntax."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zfzsLkOqrHbn",
+        "colab_type": "text"
+      },
+      "source": [
+        "The following example selecs digits #10 to #100 (#100 isn't included) and puts them in array of shape (90, 28, 28):"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dZVXUjWdrGi5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "869ab455-60b9-41b6-ce46-afeacaddb698"
+      },
+      "source": [
+        "my_slice = train_images[10:100, :, :]\n",
+        "my_slice.shape"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(90, 28, 28)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G8Z4pmeHuaAQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "bd876f1d-c5fc-48b0-dfd1-4e0635e5165f"
+      },
+      "source": [
+        "my_slice = train_images[10:100, 0:28, 0:28]\n",
+        "my_slice.shape"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(90, 28, 28)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vekWm0mdu5lC",
+        "colab_type": "text"
+      },
+      "source": [
+        "In general, you may select between any two indices along each tensor axis.  For instance in order to select 14 X 14 pixels centered in the middle, you do this:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iqzkLb2XvXLE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "my_slice = train_images[:, 14:, 14:]"
+      ],
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZnLPYl_Rvul1",
+        "colab_type": "text"
+      },
+      "source": [
+        "It's also possible to use negative indices. To crop patches of pixels out of an image."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0Ncj-Z8Bwd9M",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "my_slice = train_images[:, 7:-7, 7:-7]"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OsdGUzXIxwcR",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 2.2.7 The notion of data batches"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PDAGOi_cx4ar",
+        "colab_type": "text"
+      },
+      "source": [
+        "In general, the first axis(axis 0, because indexing starts at 0) in all data tensor you'll come across in deep learning will be the *samples axis* (sometimes called the *samples dimension*). In the MNIST example samples are images of digits."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mIQ65p_Ty1_V",
+        "colab_type": "text"
+      },
+      "source": [
+        "In addition, deep-learning models don't process an entire dataset at once; rather, they break the data into small batches. Concretely, here's one batch of our MNIST digits with the batch size of 128:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sbmRsPblzy7n",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "batch = train_images[:128]"
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7lWn5rokz7Db",
+        "colab_type": "text"
+      },
+      "source": [
+        "And the next batch."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nqBSsqzbz_Yi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "batch = train_images[128:256]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iuJz6RqM0Jz2",
+        "colab_type": "text"
+      },
+      "source": [
+        "And the nth batch:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Yxq-hgRW0l6v",
+        "colab_type": "text"
+      },
+      "source": [
+        "batch = train_images[128 * n:128 * (n + 1]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C7aaec2j1DaF",
+        "colab_type": "text"
+      },
+      "source": [
+        "When considering such a batch tensor, the first axis (axis 0) is called the *batch axis* or *batch dimension*. This is a term you'll frequently encounter when using Keras and other deep-learning libraries."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0maBDLIC1fCq",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.2.8 Real-world examples of data tensors"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pWflOzP82Djt",
+        "colab_type": "text"
+      },
+      "source": [
+        "* *Vector data* -- 2D tensors of shape (samples, features)\n",
+        "* *Timeseries data or sequence data* -- 3D tensors of shape (samples, timesteps, features)\n",
+        "* *Images* -- 4D tensors of shape (samples, frames, height, width, channels) or (samples, frames, channels, height, width)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LVnLXIWp3KX0",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
