more on data formats

--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMUKlpFtGuaOE2BCMqEZTFt",
+      "authorship_tag": "ABX9TyM3HtrY88WS4XOXXAL4VLeh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1397,7 +1397,119 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "#2.2.9 Vector data "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6cYyp4oy3o77",
+        "colab_type": "text"
+      },
+      "source": [
+        "This is the most common case. In such a dataset, each single data point can be encoded as a vector, and thus a batch of data will be encoded as a 2D tensor, where the first axis is the *samples axis* and the second axes is the *feature axis*.\n",
+        "Two examples:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d1bhke_A5Rjp",
+        "colab_type": "text"
+      },
+      "source": [
+        "* An actuarial dataset of people, where we consider each person's age, ZIP code, and income. Each person can be characterized as a vector of 3 values, and thus an entire dataset of 100,000 people can be stored in a 2D tensor of shape (1000000, 3)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jllcZDc96Q5g",
+        "colab_type": "text"
+      },
+      "source": [
+        "* A dataset of text documents, where we represent each document by the counts of how many times each word appears in it ( out of a dictionary of 20,000 words). Each document can be encoded as a vector of 20,000 values (one count per word in the dictionary), and thus an entire dataset of 500 documents can be stored in a tensor of shape (500, 20000)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gGAJFMtN8Jfp",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.2.10 Timeseries data or sequence data "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zCHML3BD8VH-",
+        "colab_type": "text"
+      },
+      "source": [
+        "Whenever time matters in your data (or the notion of sequence order), it makes sense to store it in a 3D tensor with an explicit time axis. Each sample can be encoded as a sequence of vector (a 2D tensor), and thus a batch of data will be encoded as a 3D tensor. The time is always the second axis (axis of index 1) Let's look at some examples:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GBVA2Dz79-Mg",
+        "colab_type": "text"
+      },
+      "source": [
+        "* A dataset of stock prices. Every minute, we store the current price of the stock, the highest price in the past minute, and the lowest price in the past minute. Thus every minute is encoded as a 3D vector, an entire day of trading is encoded as a 2D tensor of shape (390, 3) (there are 390 minutes in a trading day), and 250 days' worth of data can be stored in a 3D tensor of shape (250, 390, 3). Here, each sample would be one day's worth of data."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1Zlgf7Z6_Vvi",
+        "colab_type": "text"
+      },
+      "source": [
+        "* A dataset of tweets, where we encode tweet as a sequence of 280 characters out of an alphabet of 128 unique characters. In this setting, each character can be encoded as a binary vector of size 128( an all-zeros vector except for a 1 entry at the index corresponding to the character). Then each tweet can be encoded as a 2D tensor of shape (280, 128), and a dataset of 1 million twwets can be stored in a tensor of shape (1000000, 280, 128)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4FOob0bbAujd",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.2.11 Image data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wVva9p-JA4YP",
+        "colab_type": "text"
+      },
+      "source": [
+        "Images typically have three dimensions: heigth, width, and color depth. Although grayscale images (like our MNIST digits) have only a single color channel and could thus be stored in 2D tensors, by convention image tensors are always 3D, with a one-dimensional color channel for grayscale images. A batch of 128 grayscale images of size 256 x 256 could thus be stored in a tensor of shape (128, 256, 256, 1), and a batch of 128 color images could be stored in a tensor could be stored in a tensor of shape (128, 256, 256, 3)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gqnCDYssDuiD",
+        "colab_type": "text"
+      },
+      "source": [
+        "There are two conventions for shapes of images tensors: the *channel--last* convention (used by TensorFlow) and the *channel-first* convention (used by Theano). The TensorFlow machine-learning framework from Google places the color-depth axis at the end: (samples, height, width, color_depth). Meanwhile, Theano places the color depth axis right after the batch axis: (samples, color_depth, height, width). With the Theano convention, the previous examples would become (128, 1, 256, 256)\n",
+        "and (128, 3, 256, 256). The keras framework provides support for both formats."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GOmWadmtFJm6",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.2.12 Video data"
       ]
     }
   ]
