--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM3HtrY88WS4XOXXAL4VLeh",
+      "authorship_tag": "ABX9TyMmyEXpCi73Pg0J/8ANY543",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "from keras.datasets import mnist\n",
         "(train_images, train_lables), (test_images, test_labels) = mnist.load_data()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +94,7 @@
       "source": [
         "train_images.shape\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +124,7 @@
       "source": [
         "len(train_lables)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,7 +154,7 @@
       "source": [
         "train_lables"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -194,7 +194,7 @@
       "source": [
         "test_images.shape"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -224,7 +224,7 @@
       "source": [
         "len(test_labels)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +254,7 @@
       "source": [
         "test_labels"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -291,7 +291,7 @@
         "from keras import models\n",
         "from keras import layers\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -306,7 +306,7 @@
         "net.add(layers.Dense(512, activation='relu', input_shape=(28 * 28,)))\n",
         "net.add(layers.Dense(10, activation='softmax'))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -345,7 +345,7 @@
         "            loss='categorical_crossentropy',\n",
         "            metrics=['accuracy'])"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -372,7 +372,7 @@
         "test_images = test_images.reshape((10000, 28 * 28))\n",
         "test_images = test_images.astype('float32') / 255"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -398,7 +398,7 @@
         "train_lables = to_categorical(train_lables)\n",
         "test_labels = to_categorical(test_labels)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -415,7 +415,7 @@
       "source": [
         "net.fit(train_images, train_lables, epochs=5, batch_size=128)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,7 +471,7 @@
       "source": [
         "test_loss, test_acc = net.evaluate(test_images, test_labels)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,7 +496,7 @@
       "source": [
         "print(\"test_acc:\", test_acc)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -583,7 +583,7 @@
         "x = np.array(12)\n",
         "x"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -613,7 +613,7 @@
       "source": [
         "x.ndim"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -669,7 +669,7 @@
       "source": [
         "x = np.array([12, 3, 6, 14, 7])"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -686,7 +686,7 @@
       "source": [
         "x"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -716,7 +716,7 @@
       "source": [
         "x.ndim"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -776,7 +776,7 @@
         "             [6, 79, 3, 35, 1],\n",
         "             [7, 80, 4, 36, 2]])"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -793,7 +793,7 @@
       "source": [
         "x.ndim"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -857,7 +857,7 @@
         "                   [6, 79, 3, 35, 1],\n",
         "                   [7, 80, 4, 36, 2]]])"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -874,7 +874,7 @@
       "source": [
         "x.ndim"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -971,7 +971,7 @@
         "from  keras.datasets import mnist\n",
         "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -999,7 +999,7 @@
       "source": [
         "print(train_images.ndim)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1034,7 +1034,7 @@
       "source": [
         "print(train_images.shape)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1069,7 +1069,7 @@
       "source": [
         "print(train_images.dtype)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1117,7 +1117,7 @@
         "plt.imshow(digit, cmap=plt.cm.binary)\n",
         "plt.show()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1179,7 +1179,7 @@
         "my_slice = train_images[10:100, :, :]\n",
         "my_slice.shape"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1210,7 +1210,7 @@
         "my_slice = train_images[10:100, 0:28, 0:28]\n",
         "my_slice.shape"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1246,7 +1246,7 @@
       "source": [
         "my_slice = train_images[:, 14:, 14:]"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1269,7 +1269,7 @@
       "source": [
         "my_slice = train_images[:, 7:-7, 7:-7]"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1312,7 +1312,7 @@
       "source": [
         "batch = train_images[:128]"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1510,6 +1510,85 @@
       },
       "source": [
         "#2.2.12 Video data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lC6h8FiHMOeu",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.3 The gears of neural networks: tensor operations"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LvIPebQANDTT",
+        "colab_type": "text"
+      },
+      "source": [
+        "Much as any computer program can be ultimately reduced to a small set of binary operations on binary inputs (AND, OR, NOR, and so on), all transformations learned by deep neural networks can be reduced to a handful of *tensor operations* applied to tensors of numeric data. For instance, it's possible to add tensors, multiply tensors, and so on. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tpyx4qV-N2O6",
+        "colab_type": "text"
+      },
+      "source": [
+        "In our intial example, we were building our network by stacking Dense layers on top of each other. A Keras layer instance looks like this:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y2IzHUT1Oyy-",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "```\n",
+        "keras.layers.Dense(512, activation='relu')\n",
+        "```\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qS0sO5OEPN5F",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "This layer can be interpreted as a function, which takes as input a 2D tensor and returns another 2D tensor-- a new representation for the input tensor. Specifically, the function is as follows (where W is a 2D tensor and b is a vector, both attributes of the layer):\n",
+        "```\n",
+        "output = relu(dot(W, input) + b)\n",
+        "```\n",
+        "We have three tensor operations here: a dot product(*dot*) between the input tensor and a tensor named *W*; an addittion (+) between the resulting 2D tensor and a vector *b*; and, finally, a *relu* operation relu(x) is max(x, 0)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Kgmk4QHWWMQH",
+        "colab_type": "text"
+      },
+      "source": [
+        "#2.3.1 Element-wise operations"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HKip6g-fWSyo",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
