element wise ops

--- a/Chapter2_building_blocks_of_neural_nets.ipynb
+++ b/Chapter2_building_blocks_of_neural_nets.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMmyEXpCi73Pg0J/8ANY543",
+      "authorship_tag": "ABX9TyNzz3B9YpwQFtmZU/yvm2NJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1580,6 +1580,49 @@
       "source": [
         "#2.3.1 Element-wise operations"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hBsjCysdX1X4",
+        "colab_type": "text"
+      },
+      "source": [
+        "The *relu* operation and addition are *element-wise* operations: operations that are applied independently to each entry in the tesnors being considered. This means these operations are highly amenable to massivly parrallel implementations."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7oC23c6qWzaI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def naive_relu(x):\n",
+        "    assert len(x.shape) == 2\n",
+        "\n",
+        "    x = x.copy()\n",
+        "    for i in range(x.shape[0]):\n",
+        "        for j in range(x.shape[1]):\n",
+        "            x[i, j] = max(x[i, j], 0)\n",
+        "    return x"
+      ],
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uZkmueuYXg63",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
